--- a/risc.html
+++ b/risc.html
@@ -1,6 +1,7 @@
 <html>
    <head>
       <meta charset="utf-8">
+      <link rel="stylesheet" type="text/css" href="css/risc.css" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="libdraw.0.3.0.js"></script>
       <script type="text/javascript" src="risc.js"></script>
