--- a/risc.html
+++ b/risc.html
@@ -4,7 +4,12 @@
       <link rel="stylesheet" type="text/css" href="css/risc.css" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script type="text/javascript" src="libdraw.0.3.0.js"></script>
-      <script type="text/javascript" src="risc.js"></script>
+      <!--script type="text/javascript" src="risc.js"></script-->
+      <script type="text/javascript" src="risc-emu/risc-core.js"></script>
+      <script type="text/javascript" src="risc-emu/ex-cpu.js"></script>
+      <script type="text/javascript" src="risc-emu/mon-tools.js"></script>
+      <script type="text/javascript" src="risc-emu/ARMv7-core.js"></script>
+      <script type="text/javascript" src="risc-emu/ex-cpu-test.js"></script>
       <script type="text/javascript" >
          $(document).ready(function(){
             
