Calculator changes. Implemented initial VGA - video memory aligned to 1 word (32 bits) - 2 bytes for char - see CGA/VGA for reference.
In short, VGA video memory maps from <origin>, defaulted to 0xB8000.
2 bytes per character:
 - bits [0,7] - the character
 - bits [8,11] - foreground color
 - bits [12,15] - background color

No cursor support yet

--- a/risc.html
+++ b/risc.html
@@ -7,6 +7,7 @@
       <!--script type="text/javascript" src="risc.js"></script-->
       <script type="text/javascript" src="risc-emu/risc-core.js"></script>
       <script type="text/javascript" src="risc-emu/ex-cpu.js"></script>
+      <script type="text/javascript" src="risc-emu/hw/vga.js"></script>
       <script type="text/javascript" src="risc-emu/mon-tools.js"></script>
       <script type="text/javascript" src="risc-emu/ARMv7-core.js"></script>
       <script type="text/javascript" src="risc-emu/ex-cpu-test.js"></script>
