Re-organized the structure to fit libdraw dependency as a git submodule.

--- a/risc.html
+++ b/risc.html
@@ -3,8 +3,8 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="css/risc.css" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-      <script type="text/javascript" src="lib/template.js"></script>
-      <script type="text/javascript" src="libdraw.0.3.0.js"></script>
+      <script type="text/javascript" src="lib/ld/lib/template.js"></script>
+      <script type="text/javascript" src="lib/ld/libdraw.0.3.0.js"></script>
       <!--script type="text/javascript" src="risc.js"></script-->
       <script type="text/javascript" src="risc-emu/risc-core.js"></script>
       <script type="text/javascript" src="risc-emu/ex-cpu.js"></script>
