sample menu on the arm7.html Separated the arm 7 instruction sets into separate files.

--- a/arm7.html
+++ b/arm7.html
@@ -22,6 +22,28 @@
       <div class="content-wrapper">
          <div class="page-header">
             <div class="page-title">ARM v7 emulator</div>
+            <div class="page-actions">
+               <div class="page-action">
+                  <div class="action-menu-wrapper">
+                     <div class="action-title">action</div>
+                     <div class="action-icon">+</div>
+                  </div>
+                  <div class="action-menu-list">
+                     <div class="action-menu-entry">
+                        <div class="action-menu-icon "></div>
+                        <div class="action-menu-label">Test</div>
+                     </div>
+                     <div class="action-menu-entry">
+                        <div class="action-menu-icon "></div>
+                        <div class="action-menu-label">Test</div>
+                     </div>
+                     <div class="action-menu-entry">
+                        <div class="action-menu-icon "></div>
+                        <div class="action-menu-label">Test</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
             <div class="popup-wrapper">
                <div class="popup-content">
                   This is some test popup!.
@@ -33,7 +55,7 @@
             </div>
          </div>
          <div class="page-content">
-            <div style="height: 1024px;">
+            <div style="">
                This is some scrollable content!
             </div>
          </div>
