Added titles for the icons

--- a/images/svg/icons.html
+++ b/images/svg/icons.html
@@ -73,27 +73,27 @@
     </head>
     <body>
         <div>
-            <span class="icon icon-add"></span>
-            <span class="icon icon-arrow-right"></span>
-            <span class="icon icon-arrow-up"></span>
-            <span class="icon icon-arrow-left"></span>
-            <span class="icon icon-arrow-down"></span>
-            <span class="icon icon-bug"></span>
-            <span class="icon icon-clock"></span>
-            <span class="icon icon-cpu"></span>
-            <span class="icon icon-frequency"></span>
-            <span class="icon icon-memory"></span>
-            <span class="icon icon-pause"></span>
-            <span class="icon icon-play"></span>
-            <span class="icon icon-power"></span>
-            <span class="icon icon-refresh"></span>
-            <span class="icon icon-reset"></span>
-            <span class="icon icon-settings"></span>
-            <span class="icon icon-step-into"></span>
-            <span class="icon icon-step-next"></span>
-            <span class="icon icon-step-out"></span>
-            <span class="icon icon-stop"></span>
-            <span class="icon icon-vga"></span>
+            <span class="icon icon-add" title="Add"></span>
+            <span class="icon icon-arrow-right" title="Arrow Right"></span>
+            <span class="icon icon-arrow-up" title="Arrow Up"></span>
+            <span class="icon icon-arrow-left" title="Arrow Left"></span>
+            <span class="icon icon-arrow-down" title="Arrow Down"></span>
+            <span class="icon icon-bug" title="Bug"></span>
+            <span class="icon icon-clock" title="Clock"></span>
+            <span class="icon icon-cpu" title="CPU"></span>
+            <span class="icon icon-frequency" title="Frequency"></span>
+            <span class="icon icon-memory" title="Memory"></span>
+            <span class="icon icon-pause" title="Pause"></span>
+            <span class="icon icon-play" title="Play"></span>
+            <span class="icon icon-power" title="Power"></span>
+            <span class="icon icon-refresh" title="Refresh"></span>
+            <span class="icon icon-reset" title="Reset"></span>
+            <span class="icon icon-settings" title="Gear"></span>
+            <span class="icon icon-step-into" title="Debugger - step into"></span>
+            <span class="icon icon-step-next" title="Debugger - next"></span>
+            <span class="icon icon-step-out" title="Debugger - step out (return)"></span>
+            <span class="icon icon-stop" title="Stop"></span>
+            <span class="icon icon-vga" title="VGA - Video Graphics Adapter"></span>
         </div>
     </body>
 </html>
