Added example icons to the primer html file.

--- a/images/svg/icons.html
+++ b/images/svg/icons.html
@@ -69,6 +69,18 @@
             .icon-vga{
                 background: url('vga.svg');
             }
+            .icon-size{
+                background: url('size.svg');
+            }
+            .icon-assemble{
+                background: url('assemble.svg');
+            }
+            .icon-disassmeble{
+                background: url('disassemble.svg');
+            }
+            .icon-thunder{
+                background: url('thunder.svg');
+            }
         </style>
     </head>
     <body>
@@ -94,6 +106,10 @@
             <span class="icon icon-step-out" title="Debugger - step out (return)"></span>
             <span class="icon icon-stop" title="Stop"></span>
             <span class="icon icon-vga" title="VGA - Video Graphics Adapter"></span>
+            <span class="icon icon-size" title="Size"></span>
+            <span class="icon icon-assemble" title="Assemble"></span>
+            <span class="icon icon-disassmeble" title="Disassemble"></span>
+            <span class="icon icon-thunder" title="Power (thunder)"></span>
         </div>
     </body>
 </html>
