--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <header>
             <div class="logo-wrapper pull-left">
-                <a href="/">
-                    <img src="/images/logo.png"/>
+                <a href="http://natemago.github.io/primer/">
+                    <img src="images/logo.png"/>
                 </a>
             </div>
             <div class="menu-wrapper pull-right">
