"tools" module unit tests.

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,7 +16,10 @@
   <!-- endinject-->
 
   <!-- app scripts !-->
+  <script type="text/javascript" src="/src/core/error.js"></script>
   <script type="text/javascript" src="/src/tools.js"></script>
+  <script type="text/javascript" src="/src/testing/unit-test-ui.js"></script>
+  <script type="text/javascript" src="/src/testing/unit-test.js"></script>
   <!-- end app scripts-->
 
   <!-- tests -->
@@ -24,6 +27,5 @@
   <!-- end tests -->
 
   <script type="text/javascript" src="/tests/tests.runner.js"></script>
-  pajo
   </body>
 </html>
