Fixed dependencies and unit tests for oop.js

--- a/tests/index.html
+++ b/tests/index.html
@@ -17,13 +17,14 @@
 
   <!-- app scripts !-->
   <script type="text/javascript" src="/src/core/error.js"></script>
-  <script type="text/javascript" src="/src/tools.js"></script>
+  <script type="text/javascript" src="/src/tools/oop.js"></script>
+  <script type="text/javascript" src="/src/tools/dom.js"></script>
   <script type="text/javascript" src="/src/testing/unit-test-ui.js"></script>
   <script type="text/javascript" src="/src/testing/unit-test.js"></script>
   <!-- end app scripts-->
 
   <!-- tests -->
-  <script type="text/javascript" src="/tests/src/tools.spec.js"></script>
+  <script type="text/javascript" src="/tests/src/tools/oop.spec.js"></script>
   <!-- end tests -->
 
   <script type="text/javascript" src="/tests/tests.runner.js"></script>
