Added skeleton for logging and text utilities.

--- a/tests/index.html
+++ b/tests/index.html
@@ -25,6 +25,7 @@
 
   <!-- tests -->
   <script type="text/javascript" src="/tests/src/tools/oop.spec.js"></script>
+  <script type="text/javascript" src="/tests/src/text/format.spec.js"></script>
   <!-- end tests -->
 
   <script type="text/javascript" src="/tests/tests.runner.js"></script>
