--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,7 @@
   <script type="text/javascript" src="/src/core/error.js"></script>
   <script type="text/javascript" src="/src/tools/oop.js"></script>
   <script type="text/javascript" src="/src/tools/dom.js"></script>
+  <script type="text/javascript" src="/src/text/format.js"></script>
   <script type="text/javascript" src="/src/testing/unit-test-ui.js"></script>
   <script type="text/javascript" src="/src/testing/unit-test.js"></script>
   <!-- end app scripts-->
