--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="lib/simplegrid/simplegrid.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="css/primer.css" media="screen" />
     </head>
